--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'java'
+apply plugin: 'maven'
+
+project.group = 'ch.catnip.ipaparser'
+project.version = '0.0.1'
 
 repositories {
     jcenter()
